--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css" />
-    <title>trivia game</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>UPE Quiz App</title>
   </head>
   <body>
+    <h1 id="score" style="color: #d6d3af; text-shadow: 3px 2px #000; position: absolute; top: 20px; right: 20px">
+      Score: 0
+    </h1>
     <div class="box" id="quiz">
-      <h2 id="question">question text</h2>
+      <h2 id="question">question?</h2>
       <div class="item">
         <ul>
           <li>
@@ -32,6 +35,7 @@
       </div>
       <button id="submitBtn">Next</button>
     </div>
-    <script type="module" src="./index.js"></script>
+
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
